# cet200

./: .editorconfig  .gitignore  NOTICE  README.md
agx_file/: cet200_bucket.agx  track_shoelink.mtl
cet200_agxpy_standalone/: package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
cet200_agxpy_standalone/resource/: cet200_agxpy_standalone
cet200_agxpy_standalone/src/cet200_agxpy_standalone/: __init__.py  cet200.py  excavator_keyboard_gamepad.py  excavator_monitor.py
cet200_agxpy_standalone/src/cet200_agxpy_standalone/apps/: __init__.py  cet200_compare_models.py  cet200_on_ground.py  cet200_on_terrain.py
cet200_description/: CMakeLists.txt  package.xml
cet200_description/launch/: display.launch.py  display.rviz
cet200_description/meshes/: arm.dae  boom.dae  bucket.dae  collider_bucket.dae  collider_bucket.stl  idler.dae  roller.dae  sprocket.dae  track_frame.dae  track_shoelink.dae  upper_structure.dae
cet200_description/urdf/: CMakeLists.txt  cet200.urdf  cet200.xacro
cet200_openplx_standalone/: package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: 3d_modeling_pipeline.md  cet200_spec.xlsx  configuration.pptx  git_sparse_checkout.md  program_dependent_model_files.md  spec.xlsx
exchange_formats/: cet200.glb
exchange_formats/parts/: arm.glb  collider_bucket.glb  idler.glb  roller.glb  track_shoelink.glb
generic_models/parts/: boom.glb  bucket.glb  collider_bucket.glb  (+4 more)
openplx/: cet200.openplx
spaceclaim_momentum/: cet200_bucket.scdoc
tools/: blender_convert_glb_to_dae.py  run_blender_convert_glb_to_dae.bat
(+3 files in other folders)
